Fixed encoding questions per discussion; fixed multi-precision semantics per disucssion; lots of writing/reorganisation updates; lots of additional bib. content

--- a/docs/shared.bib
+++ b/docs/shared.bib
@@ -1,3 +1,120 @@
+%author = {J. Gro{\ss}sch\"{a}dl}
+%title = {Instruction Set Extension for Long Integer Modulo Arithmetic on {RISC}-Based Smart Cards}
+%SBAC-PAD 
+%pages = {13--19}
+%year = {2002}
+%
+%author = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje}
+%title = {Low-Power Design of a Functional Unit for Arithmetic in Finite Fields {GF(p)} and {GF(2m)}}
+%WISA
+%pages = {227--243 }
+%year = {2003}
+%
+%author = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje}
+%title = {Optimized {RISC} Architecture for Multiple-Precision Modular Arithmetic}
+%SPC 
+%pages = {253--270}
+%year = {2003 }
+%
+%author = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje}
+%title = {Architectural Enhancements for Montgomery Multiplication on Embedded {RISC} Processors}
+%ACNS
+%pages = {418--434 }
+%year = {2003}
+%
+%author = {J. Gro{\ss}sch\"{a}dl}
+%title = {Architectural Support for Long Integer Modulo Arithmetic on {RISC}-Based Smart Cards}
+%IJHPCA 17(2)
+%pages = {135--146 }
+%year = {2003}
+%
+%author = {J. Gro{\ss}sch\"{a}dl and K.C. Posch and S. Tillich}
+%title = {Architectural Enhancements to Support Digital Signal Processing and Public-Key Cryptography}
+%WISES 
+%pages = {129--143}
+%year = {2004}
+%
+%author = {S. Tillich and J. Gro{\ss}sch\"{a}dl}
+%title = {Accelerating {AES} Using Instruction Set Extensions for Elliptic Curve Cryptography}
+%ICCSA 
+%volume = {2}
+%pages = {665--675}
+%year = {2005}
+%
+%author = {S. Tillich and J. Gro{\ss}sch\"{a}dl and A. Szekely}
+%title = {An Instruction Set Extension for Fast and Memory-Efficient {AES} Implementation}
+%Communications and Multimedia Security 
+%pages = {11--21}
+%year = {2005}
+%
+%author = {J. Gro{\ss}sch\"{a}dl and P. Ienne and L. Pozzi and S. Tillich and A.K. Verma}
+%title = {Combining algorithm exploration with instruction set design: a case study in elliptic curve cryptography}
+%DATE 
+%pages = {218--223}
+%year = {2006}
+%
+%author = {S. Tillich and J. Gro{\ss}sch\"{a}dl}
+%title = {{VLSI} Implementation of a Functional Unit to Accelerate {ECC} and {AES} on 32-Bit Processors}
+%WAIFI 
+%pages = {40--54}
+%year = {2007}
+%
+%author = {T. Vejda and D. Page and J. Gro{\ss}sch\"{a}dl:}
+%title = {Instruction Set Extensions for Pairing-Based Cryptography}
+%Pairing 
+%pages = {208--224}
+%year = {2007}
+%
+%author = {J. Gro{\ss}sch\"{a}dl and S. Tillich and A. Szekely}
+%title = {Performance Evaluation of Instruction Set Extensions for Long Integer Modular Arithmetic on a {SPARC} {V8} Processor}
+%DSD 
+%pages = {680--689}
+%year = {2007}
+%
+%author = {\"{O}v\"{u}n\c{c} Kocabas and E. Savas and J. Gro{\ss}sch\"{a}dl}
+%title = {Enhancing an Embedded Processor Core with a Cryptographic Unit for Speed and Security}
+%ReConFig 
+%pages = {409--414}
+%year = {2008 }
+%
+%author = {Z. Shi and X. Yang and R.B. Lee}
+%title = {Alternative application-specific processor architectures for fast arbitrary bit permutations}
+%IJES 3(4): 
+%pages = {219--228}
+%year = {2008}
+%
+%author = {Y. Hilewitz and R.B. Lee}
+%title = {Fast Bit Gather, Bit Scatter and Bit Permutation Instructions for Commodity Microprocessors}
+%Signal Processing Systems 53(1-2):
+%pages = {145--169}
+%year = {2008}
+%
+%author = {Y. Hilewitz and Y.L. Yin and R.B. Lee}
+%title = {Accelerating the {Whirlpool} Hash Function Using Parallel Table Lookup and Fast Cyclical Permutation}
+%FSE
+%pages = {173-188}
+%year = {2008}
+%
+%author = {R.B. Lee and X. Yang and Zhijie Shi}
+%title = {Single-Cycle Bit Permutations with {MOMR} Execution}
+%J. Comput. Sci. Technol. 20(5): 
+%pages = {577--585}
+%year = {2005}
+%
+%author = {J.P. McGregor and R.B. Lee}
+%title = {Architectural techniques for accelerating subword permutations with repetitions}
+%IEEE Trans. VLSI Syst. 11(3)
+%pages = {325--335}
+%year = {2003}
+%
+%author = {R.B. Lee and Z. Shi and X. Yang}
+%title = {Cryptography Efficient Permutation Instructions for Fast Software}
+%IEEE Micro 
+%volume = {21},
+%number = {6}
+%pages = {56--69}
+%year = {2001}
+
 % =============================================================================
 
 @inproceedings{SCARV:LaiMas:90,
@@ -10,15 +127,6 @@
   year         = {1990}
 }
 
-@inproceedings{SCARV:KasSch:09,
-  author       = {E. K\"{a}sper and P. Schwabe},
-  title        = {Faster and Timing-attack Resistant {AES-GCM}},
-  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
-  publisher    = {Springer-Verlag LNCS 5747}, 
-  pages        = {1--17}, 
-  year         = {2009}
-}
-
 @inproceedings{SCARV:GGHJPTW:11,
   author       = {P. Grabher and J. Gro{\ss}sch\"{a}dl and S. Hoerder and K. J\"{a}rvinen and D. Page and S. Tillich and M. W\'{o}jcik},
   title        = {An exploration of mechanisms for dynamic cryptographic instruction set extension},
@@ -27,6 +135,15 @@
   series       = {LNCS 6917}, 
   pages        = {1--16}, 
   year         = {2011}
+}
+
+@inproceedings{SCARV:KasSch:09,
+  author       = {E. K\"{a}sper and P. Schwabe},
+  title        = {Faster and Timing-attack Resistant {AES-GCM}},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},
+  publisher    = {Springer-Verlag LNCS 5747}, 
+  pages        = {1--17}, 
+  year         = {2009}
 }
 
 @inproceedings{SCARV:GraGroPag:08,
@@ -39,6 +156,26 @@
   year         = {2008}
 }
 
+@inproceedings{SCARV:TilGro:07,
+  author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
+  title        = {Power Analysis Resistant {AES} Implementation with Instruction Set Extensions},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},  
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 4727}, 
+  pages        = {303--319},
+  year         = {2007}
+}
+
+@inproceedings{SCARV:KLWGSTW:06,
+  author       = {M. Koschuch and J. Lechner and A. Weitzer and J. Gro{\ss}sch\"{a}dl and A. Szekely and S. Tillich and J. Wolkerstorfer},
+  title        = {Hardware/Software Co-design of Elliptic Curve Cryptography on an 8051 Microcontroller},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)}, 
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 4249}, 
+  pages        = {430--444},
+  year         = {2006}
+}
+
 @inproceedings{SCARV:TilGro:06,
   author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
   title        = {Instruction Set Extensions for Efficient {AES} Implementation on {32-bit} Processors},
@@ -47,6 +184,26 @@
   series       = {LNCS 4249},
   pages        = {270--284},
   year         = {2006}
+}
+
+@inproceedings{SCARV:GAST:05,
+  author       = {J. Gro{\ss}sch\"{a}dl and R.M. Avanzi and E. Savas and S. Tillich},
+  title        = {Energy-Efficient Software Implementation of Long Integer Modular Arithmetic},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},  
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 3659}, 
+  pages        = {75--90},
+  year         = {2005}
+}
+
+@inproceedings{SCARV:GroSav:04,
+  author       = {J. Gro{\ss}sch\"{a}dl and E. Savas},
+  title        = {Instruction Set Extensions for Fast Arithmetic in Finite Fields {GF(p)} and {GF(2m)}},
+  booktitle    = {Cryptographic Hardware and Embedded Systems (CHES)},  
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 3156}, 
+  pages        = {133--147},
+  year         = {2004}
 }
 
 @inproceedings{SCARV:MTRGS:99,
@@ -88,6 +245,120 @@
   issues       = {LNCS 5453},
   pages        = {318--323},
   year         = {2009}
+}
+
+@inproceedings{SCARV:FisLee:05,
+  author       = {A.M. Fiskiran and R.B. Lee},
+  title        = {On-Chip Lookup Tables for Fast Symmetric-Key Encryption},
+  booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
+  pages        = {356--363},
+  year         = {2005}
+}
+
+@inproceedings{SCARV:FisLee:04,
+  author       = {A.M. Fiskiran and R.B. Lee},
+  title        = {Evaluating Instruction Set Extensions for Fast Arithmetic on Binary Finite Fields},
+  booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
+  pages        = {125--136},
+  year         = {2004}
+}
+
+@inproceedings{SCARV:GKP:04,
+  author       = {J. Gro{\ss}sch\"{a}dl and S.S. Kumar and C. Paar},
+  title        = {Architectural Support for Arithmetic in Optimal Extension Fields},
+  booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
+  pages        = {111--124},
+  year         = {2004}
+}
+
+@inproceedings{SCARV:ShiYanLee:03,
+  author       = {Z. Shi and X. Yang and R.B. Lee},
+  title        = {Arbitrary Bit Permutations in One or Two Cycles},
+  booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
+  pages        = {237--247},
+  year         = {2003}
+}
+
+@inproceedings{SCARV:Lee:03,
+  author       = {R.B. Lee},
+  title        = {Challenges in the design of security-aware processors},
+  booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
+  pages        = {1--2},
+  year         = {2003}
+}
+
+@inproceedings{SCARV:GroKam:03,
+  author       = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje},
+  title        = {Instruction Set Extension for Fast Elliptic Curve Cryptography over Binary Finite Fields {GF(2m)}},
+  booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
+  pages        = {455--468},
+  year         = {2003}
+}
+
+@inproceedings{SCARV:ShiLee:00,
+  author       = {Z. Shi and R.B. Lee},
+  title        = {Bit Permutation Instructions for Accelerating Software Cryptography},
+  booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
+  pages        = {138--148},
+  year         = {2000}
+}
+
+@inproceedings{SCARV:Lee:00,
+  author       = {R.B. Lee},
+  title        = {Subword Permutation Instructions for Two-Dimensional Multimedia Processing in {MicroSIMD} Architectures},
+  booktitle    = {Application-Specific Systems, Architectures, and Processors (ASAP)},
+  pages        = {3--14},
+  year         = {2000}
+}
+
+@inproceedings{SCARV:FisLee:05,
+  author       = {A.M. Fiskiran and R.B. Lee},
+  title        = {Fast Parallel Table Lookups to Accelerate Symmetric-Key Cryptography},
+  booktitle    = {Information Technology: Coding and Computing (ITCC)},
+  volume       = {1},
+  pages        = {526--531},
+  year         = {2005}
+}
+
+@inproceedings{SCARV:LSYRR:04,
+  author       = {R.B. Lee and Z. Shi and Y.L. Yin and R.L. Rivest and M.J.B. Robshaw},
+  title        = {On Permutation Operations in Cipher Design},
+  booktitle    = {Information Technology: Coding and Computing (ITCC)},
+  volume       = {2},
+  pages        = {569--577},
+  year         = {2004}
+}
+
+@inproceedings{SCARV:ShiLee:02,
+  author       = {Z. Shi and R.B. Lee},
+  title        = {Subword Sorting with Versatile Permutation Instructions},
+  booktitle    = {International Conference on Computer Design (ICCD)},
+  pages        = {234--241},
+  year         = {2002}
+}
+
+@inproceedings{SCARV:McGLee:01,
+  author       = {J.P. McGregor and R.B. Lee},
+  title        = {Architectural Enhancements for Fast Subword Permutations with Repetitions in Cryptographic Applications},
+  booktitle    = {International Conference on Computer Design (ICCD)},
+  pages        = {453--461},
+  year         = {2001}
+}
+
+@inproceedings{SCARV:FisLee:01,
+  author       = {A.M. Fiskiran and R.B. Lee},
+  title        = {Performance Impact of Addressing Modes on Encryption Algorithms},
+  booktitle    = {International Conference on Computer Design (ICCD)},
+  pages        = {542--545},
+  year         = {2001}
+}
+
+@inproceedings{SCARV:YanLee:00,
+  author       = {X. Yang and R.B. Lee},
+  title        = {Fast Subword Permutation Instructions Using Omega and Flip Network Stages},
+  booktitle    = {International Conference on Computer Design (ICCD)},
+  pages        = {15--21},
+  year         = {2000}
 }
 
 @inproceedings{SCARV:GeYarHei:18,
@@ -171,14 +442,6 @@
   booktitle    = {Design, Automation, and Test in Europe (DATE)},
   pages        = {1529--1534},
   year         = {2016}
-}
-
-@inproceedings{SCARV:LSYRR:04,
-  author       = {R.B. Lee and Z. Shi and Y.L. Yin and R.L. Rivest and M.J.B. Robshaw},
-  title        = {On Permutation Operations in Cipher Design},
-  booktitle    = {International Conference on Information Technology: Coding and Computing (ITCC)},
-  pages        = {569--577},
-  year         = {2004}
 }
 
 @inproceedings{SCARV:TilKirSze:10,
