--- a/docs/specification/appx-related.tex
+++ b/docs/specification/appx-related.tex
@@ -5,14 +5,36 @@
 \cite{SCARV:WuWeaAus:01}
 \cite{SCARV:TheSisPne:09}
 \cite{SCARV:MTRGS:99}
-% ISEs
+\cite{SCARV:GGHJPTW:11}
+
+% ISEs: general
 \cite{SCARV:BarGioMar:09}
 \cite{SCARV:RegIen:16}
 \cite{SCARV:FazLopOli:18}
 
+% arith: \B{Z}_{N} and general multi-precision
+\cite{SCARV:GAST:05}
+% arith: \B{F}_{2^m}
+\cite{SCARV:GroKam:03,SCARV:FisLee:04}
+% arith: OEF
+\cite{SCARV:GKP:04}
+% arith: mixed purpose
+\cite{SCARV:GroSav:04}
+
+% AES: attack resistant
+\cite{SCARV:TilGro:07}
+% AES: efficient
+\cite{SCARV:TilGro:06}
+
+% ECC
+\cite{SCARV:KLWGSTW:06}
+
+% table look-up + memory access
+\cite{SCARV:FisLee:01,SCARV:FisLee:05,SCARV:FisLee:05}
+
 % bit-permitation
 
-\cite{SCARV:LeeShiYan:01,SCARV:LSYRR:04}
+\cite{SCARV:ShiLee:00,SCARV:YanLee:00,SCARV:McGLee:01,SCARV:ShiLee:02,SCARV:ShiYanLee:03,SCARV:LSYRR:04}
 
 % bit-slicing
 
