--- a/docs/specification/bg-design.tex
+++ b/docs/specification/bg-design.tex
@@ -91,7 +91,7 @@
             An unfortunate fact is that security is commonly relegated to a 
             second-class design metric, and so, by implication, viewed as 
             being of secondary importance;
-            see, e.g., \cite{SCARV:RKLMR:03,SCARV:RRKH:04,SCARV:BurMutTiw:16}.
+            see, e.g., \cite{SCARV:Lee:03,SCARV:RKLMR:03,SCARV:RRKH:04,SCARV:BurMutTiw:16}.
             In contrast, \XCID treats security as a first-class metric, and
             so {\em at least} as important as more traditional alternatives.
             For example,
