--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -135,7 +135,7 @@
 
 % -----------------------------------------------------------------------------
 
-\newcommandx{\XCID}[1][1={}]{{\sf XCrypto}\IfEq{#1}{}{}{[#1]}\xspace}
+\newcommandx{\XCID}[1][1={}]{\mbox{{\sf XCrypto}\IfEq{#1}{}{}{[#1]}}\xspace}
 
 \newcommandx{\XCINSTR}[6][6={}]{
   \paragraph{\VERB[RV]{#1}}
@@ -178,57 +178,73 @@
 \DeclareMathOperator{\abs}{abs}
 \DeclareMathOperator{\ext}{ext}
 
-% calligraphic (e.g., for mathematical spaces)
+% fonts: calligraphic (e.g., for mathematical spaces), black board  (e.g., for mathematical structures)
 \newcommandx{\C}[1]{\ensuremath{\mathcal #1}\xspace}
-% black board  (e.g., for mathematical structures)
 \newcommandx{\B}[1]{\ensuremath{\mathbb  #1}\xspace}
+
 % algorithm
-\newcommandx{\ALG}[1]{\textsc{#1}}
+\newcommandx{\ALG}[1]{\ensuremath\textsc{#1}\xspace}
+
 % instruction operand
 \newcommandx{\OPER}[1]{\mbox{\tt #1}} % TODO: remove
-% index in object
+
+% access via index or identifier in object
 \newcommandx{\INDEX}[3][1={}]{\ensuremath{{#2}_{#3}^{#1}}\xspace}
-% field in object
 \newcommandx{\FIELD}[2]{\ensuremath{{#1}[{#2}]}\xspace}
-% field in namepace
 \newcommandx{\SCOPE}[2]{\ensuremath{{#1}.{#2}}\xspace}
+
 % truth values
 \newcommandx{\TRUE}{\mbox{\rm\bf true}\xspace}
 \newcommandx{\FALSE}{\mbox{\rm\bf false}\xspace}
+
 % radix
 \newcommandx{\RADIX}[2]{\ensuremath{{#1}_{({#2})}}\xspace}
+
 % assignment and definition
 \newcommandx{\ASN}{\ensuremath{\leftarrow}\xspace}
 \newcommandx{\DEF}{\ensuremath{:=}\xspace}
+
 % random sample
 \newcommandx{\RAND}{\ensuremath{\xleftarrow{\$}}\xspace}
+
 % test
 \newcommandx{\TEST}[1]{\ensuremath{\overset{?}{#1}}\xspace}
+
 % range
 \newcommandx{\RANGE}{\ensuremath{:}\xspace}
+
 % cardinality
 \newcommandx{\CARD}[1]{\ensuremath{|#1|}\xspace}
+
 % least- and most-significant bits
 \newcommandx{\LSB}[2][1={1}]{\ensuremath\textsc{LSB}_{\IfEq{#1}{1}{}{#1}}( #2 )\xspace}
 \newcommandx{\MSB}[2][1={1}]{\ensuremath\textsc{MSB}_{\IfEq{#1}{1}{}{#1}}( #2 )\xspace}
+
 % parity
 \newcommandx{\PARITY}[1][1={}]{\ensuremath{\mathcal P}^{#1}\xspace}
+
 % Hamming weight and distance
 \newcommandx{\HW}{\ensuremath{\mathcal H}\xspace}
 \newcommandx{\HD}{\ensuremath{\mathcal D}\xspace}
+
 % qualified operator, wrt. size plus signed vs. unsigned
 \newcommandx{\OP}[3][1={},2={}]{\ensuremath{#3}^{#1}_{#2}\xspace}
+
 % zero or sign extension
 \newcommandx{\EXT}[2][1={}]{\ensuremath\ext^{#1}_{#2}\xspace}
+
 % concatination
 \newcommandx{\CONS}{\ensuremath{\;\parallel\;}\xspace}
+
 % set builder st.
 \newcommandx{\ST}{\ensuremath{\;|\;}\xspace}
+
 % left- and right-shift, and left- and right-rotate
 \newcommandx{\LSH}{\ensuremath{\ll}\xspace}
 \newcommandx{\RSH}{\ensuremath{\gg}\xspace}
 \newcommandx{\LRT}{\ensuremath{\lll}\xspace}
 \newcommandx{\RRT}{\ensuremath{\ggg}\xspace}
+
 % Boolean operators
 \newcommandx{\NAND}{\ensuremath{\;\overline{\wedge}\;}\xspace}
 \newcommandx{\NIOR}{\ensuremath{\;\overline{\vee}\;}\xspace}
@@ -238,6 +254,7 @@
 \newcommandx{\AND}{\ensuremath{\wedge}\xspace}
 \newcommandx{\IOR}{\ensuremath{\vee  }\xspace}
 \newcommandx{\XOR}{\ensuremath{\oplus}\xspace}
+
 % type- or structure-annotated operators
 \newcommandx{\SID}[2][1={}]{#2_{\mathsmaller{#1}}}
 \newcommandx{\SADD}[1][1={}]{\ensuremath{\oplus_{\mathsmaller{#1}}}\xspace}
@@ -245,18 +262,21 @@
 \newcommandx{\SDOT}[1][1={}]{\ensuremath{\odot_{\mathsmaller{#1}}}\xspace}
 \newcommandx{\SMUL}[1][1={}]{\ensuremath{\otimes_{\mathsmaller{#1}}}\xspace}
 \newcommandx{\SDIV}[1][1={}]{\ensuremath{\oslash_{\mathsmaller{#1}}}\xspace}
+
 % collections
 \newcommandx{\TUPLE}[1]{\ensuremath{({#1})}\xspace}
 \newcommandx{\TABLE}[1]{\ensuremath{[{#1}]}\xspace}
 \newcommandx{\LIST}[1]{\ensuremath{\langle{#1}\rangle}\xspace}
 \newcommandx{\SET}[1]{\ensuremath{\{{#1}\}}\xspace}
-% memory, general-purpose and special-purpose registers, etc.
+
+% architectural resources
 \newcommandx{\RNG}{{\ensuremath{\sf RNG}}\xspace}
-\newcommandx{\MEM}[3][1={},2={},3={}]{{\ensuremath\IfEq{#1}{*}{{\sf  MEM}[{#2}]^{#3}}{{\sf   MEM}}}\xspace}
-\newcommandx{\GPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  GPR}[{#2}]     }{{\sf   GPR}}}\xspace}
-\newcommandx{\CPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  CPR}[{#2}]     }{{\sf   CPR}}}\xspace} % TODO: remove
-\newcommandx{\XCR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf  XCR}[{#2}]     }{{\sf   CPR}}}\xspace}
-\newcommandx{\SPR}[3][     2={},3={}]{{\ensuremath\IfEq{#2}{*}{{\sf   #1}[{#3}]     }{{\sf    #1}}}\xspace}
+\newcommandx{\MEM}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf MEM}[{#2}]}{{\sf MEM}}}\xspace}
+\newcommandx{\GPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf GPR}[{#2}]}{{\sf GPR}}}\xspace}
+\newcommandx{\CPR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf CPR}[{#2}]}{{\sf CPR}}}\xspace} % TODO: remove
+\newcommandx{\XCR}[2][1={},2={}     ]{{\ensuremath\IfEq{#1}{*}{{\sf XCR}[{#2}]}{{\sf XCR}}}\xspace}
+\newcommandx{\SPR}[3][     2={},3={}]{{\ensuremath\IfEq{#2}{*}{{\sf  #1}[{#3}]}{{\sf  #1}}}\xspace}
+
 % references
 \newcommandx{\SEC}[1][1={}]{\IfEq{#1}{s}{Sections}{Section}\xspace}
 \newcommandx{\TAB}[1][1={}]{\IfEq{#1}{s}{Tables}{Table}\xspace}
@@ -265,9 +285,11 @@
 \newcommandx{\REFTAB}[1]{\TAB~\ref{#1}\xspace}
 \newcommandx{\REFFIG}[1]{\FIG~\ref{#1}\xspace}
 
-% set (approximate) styles
-\lstalias{RV}{C}
-
+% verbatim macro: inline
+\newcommand{\VERB}[2][]{\mbox{\lstinline[style={inline},language={#1}]`#2`}}
+% verbatim macro:  block
+\lstnewenvironment{MKVERB}[1][]{\lstset{basicstyle=\ttfamily,#1}}{}
+% verbatim style
 \lstdefinestyle{inline}{
   escapechar={¬},
   basicstyle=\ttfamily, 
@@ -298,11 +320,8 @@
   showstringspaces=false,
   frame=single
 }
-
-% provide inline verbatim, e.g., \VERB[C]{text}
-\newcommand{\VERB}[2][]{\mbox{\lstinline[style={inline},language={#1}]`#2`}}
-% provide block  verbatim, e.g., \begin{MKVERB}[language=C,style={foo}]
-\lstnewenvironment{MKVERB}[1][]{\lstset{basicstyle=\ttfamily,#1}}{}
+% verbatim language
+\lstalias{RV}{C}
 
 % http://tex.stackexchange.com/questions/164664/how-to-create-an-array-with-both-vertical-and-horizontal-braces-around-the-eleme
 \newcommand\undermat[2]{%
