--- a/docs/specification/spec-instr.tex
+++ b/docs/specification/spec-instr.tex
@@ -168,11 +168,12 @@
 
 % =============================================================================
 
-\subsubsection{Class-$2.2$: memory-related operations}
+\subsubsection{Class-$2.2$: memory}
 \label{sec:spec:instr:2:2}
 
-% TODO: crd should be a source?
-\XCINSTR{SCATTER.b}{rs, base, offsets}{
+% -----------------------------------------------------------------------------
+
+\XCINSTR{SCATTER.b}{crd, rs2, crs2}{
   \iencscatterb
 }{
 
@@ -181,25 +182,28 @@
   $addr_1                                   \ASN \GPR[*][{\VERB[RV]{rs1}}] + \INDEX[ 8]{\XCR[*][{\VERB[RV]{crs2}}]}{1}$ \;
   $addr_2                                   \ASN \GPR[*][{\VERB[RV]{rs1}}] + \INDEX[ 8]{\XCR[*][{\VERB[RV]{crs2}}]}{2}$ \;
   $addr_3                                   \ASN \GPR[*][{\VERB[RV]{rs1}}] + \INDEX[ 8]{\XCR[*][{\VERB[RV]{crs2}}]}{3}$ \;
-  $\MEM[*][addr_0  ]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{rs}}]}{0}$ \;
-  $\MEM[*][addr_1  ]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{rs}}]}{1}$ \;
-  $\MEM[*][addr_2  ]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{rs}}]}{2}$ \;
-  $\MEM[*][addr_3  ]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{rs}}]}{3}$ \;
+  $\MEM[*][addr_0  ]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{0}$ \;
+  $\MEM[*][addr_1  ]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{1}$ \;
+  $\MEM[*][addr_2  ]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{2}$ \;
+  $\MEM[*][addr_3  ]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{3}$ \;
 }
 
-% TODO: crd should be a source?
-\XCINSTR{SCATTER.h}{rs, base, offsets}{
+% -----------------------------------------------------------------------------
+
+\XCINSTR{SCATTER.h}{crd, rs2, crs2}{
   \iencscatterh
 }{
 
 }{
   $addr_0                                   \ASN \GPR[*][{\VERB[RV]{rs1}}] + \INDEX[16]{\XCR[*][{\VERB[RV]{crs2}}]}{0}$ \;
   $addr_1                                   \ASN \GPR[*][{\VERB[RV]{rs1}}] + \INDEX[16]{\XCR[*][{\VERB[RV]{crs2}}]}{1}$ \;
-  $\MEM[*][addr_0+0]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{rs}}]}{0}$ \;
-  $\MEM[*][addr_0+1]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{rs}}]}{1}$ \;
-  $\MEM[*][addr_1+0]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{rs}}]}{2}$ \;
-  $\MEM[*][addr_1+1]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{rs}}]}{3}$ \;
+  $\MEM[*][addr_0+0]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{0}$ \;
+  $\MEM[*][addr_0+1]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{1}$ \;
+  $\MEM[*][addr_1+0]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{2}$ \;
+  $\MEM[*][addr_1+1]                        \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{3}$ \;
 }
+
+% -----------------------------------------------------------------------------
 
 \XCINSTR{GATHER.b}{crd, rs1, crs2}{
   \iencgatherb
@@ -216,6 +220,8 @@
   $\INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{3} \ASN \MEM[*][addr_3  ]$ \;
 }
 
+% -----------------------------------------------------------------------------
+
 \XCINSTR{GATHER.h}{rd, rs1, crs2}{
   \iencgatherh
 }{
@@ -231,7 +237,7 @@
 
 % =============================================================================
 
-\subsubsection{Class-$2.3$: bit-oriented operations}
+\subsubsection{Class-$2.3$: bit-oriented}
 \label{sec:spec:instr:2:3}
 
 \XCINSTR{LLI.cr}{crd, imm16}{
@@ -247,6 +253,8 @@
 }{
   $\INDEX[16]{\XCR[*][{\VERB[RV]{crd}}]}{0} \ASN \VERB[RV]{imm16}$ \;
 }
+
+% -----------------------------------------------------------------------------
 
 \XCINSTR{LUI.cr}{crd, imm16}{
   \iencluicr
@@ -270,6 +278,8 @@
 }{
   $\INDEX[16]{\XCR[*][{\VERB[RV]{crd}}]}{1} \ASN \VERB[RV]{imm16}$ \;
 }
+
+% -----------------------------------------------------------------------------
 
 \XCINSTR{BOP.cr}{crd, crs1, crs2, lut4}{
   \iencbopcr
@@ -302,43 +312,37 @@
 %These examples of BOP.cr show how to encode the existing
 %bitwise operation instructions found in the base RISC-V architecture.
 
-%\instdescx{EXT.cr}
-%{\iencextcr}
-%{
-%This instruction allows for extraction of contiguous sequences of two-bit
-%pairs from words.
-%It takes a two bit aligned start index {\tt s}, and a length
-%{\tt l}, and extracts bits from $2*s$ to $(2*s)+(2*l)$, depositing them in
-%the destination register.
-%}{
-%\begin{itemize}
-%\item \INST{EXT.cr rd, rs, s, l}{
-%    $b \ASN 2*s$\\
-%    $e \ASN 2*l + b$\\
-%    $\XCR[*][rd][e:0] \ASN \XCR[*][rs][e:b]$
-%}
-%\end{itemize}
-%}{}
-%
-%
-%\instdescx{INS.cr}
-%{\iencinscr}
-%{
-%This instruction allows for insertion of a contiguous sequences of two-bit
-%pairs into words.
-%It takes the low $2*l$ bits of $\XCR[*][rs]$ and inserts them
-%into $\XCR[*][rd]$, starting at bit position $2*s$.
-%}{
-%\begin{itemize}
-%\item \INST{INS.cr rd, rs, s, l}{
-%    $b \ASN 2*s$\\
-%    $e \ASN 2*l + b$\\
-%    $\XCR[*][rd][e:b] \ASN \XCR[*][rs][e:0]$
-%}
-%\end{itemize}
-%}{}
+% -----------------------------------------------------------------------------
 
-% TODO: lu4 should be imm4 or shamt?
+\XCINSTR{EXT.cr}{crd, crs, cs, cl}{
+  \iencextcr
+}{
+  Extract a contiguous sequences of $2$-bit crumbs 
+  from              one $\XCR$ register, and
+  insert them as the LSBs in another $\XCR$ register.
+}{
+  $lo \ASN 2 \cdot \VERB[RV]{cs}         $ \;
+  $hi \ASN 2 \cdot \VERB[RV]{cl} + lo - 1$ \;
+  $\INDEX{\XCR[*][{\VERB[RV]{crd}}]}{( 2 \cdot \VERB[RV]{cl} - 1 ) \RANGE 0} \ASN \INDEX{\XCR[*][{\VERB[RV]{crs}}]}{hi \RANGE lo}$ \;
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{INS.cr}{crd, crs, cs, cl}{
+  \iencinscr
+}{
+  Extract a contiguous sequences of $2$-bit crumbs 
+  from the LSBSs of one $\XCR$ register, and
+  insert   them           in another $\XCR$ register.
+}{
+  $lo \ASN 2 \cdot \VERB[RV]{cs}         $ \;
+  $hi \ASN 2 \cdot \VERB[RV]{cl} + lo - 1$ \;
+  $\INDEX{\XCR[*][{\VERB[RV]{crs}}]}{hi \RANGE lo}$ \ASN \INDEX{\XCR[*][{\VERB[RV]{crd}}]}{( 2 \cdot \VERB[RV]{cl} - 1 ) \RANGE 0} \;
+}
+
+% -----------------------------------------------------------------------------
+
+% TODO: shamt -> rtamt
 \XCINSTR{LMIX.cr}{rd, rs1, rs2, shamt}{
   \ienclmixcr
 }{
@@ -365,7 +369,22 @@
   }
 }
 
-% TODO: lu4 should be imm4 or shamt?
+%\paragraph{Examples:}
+%\ASM{MIX.cr} allows us to create any mix of bits from two registers
+%using a single 3-instruction sequence:
+%
+%\begin{itemize}
+%\item{\tt LUI.cr   c0, 0xF0F0     // Load a mask into c0 which will select}
+%\item{\tt LLI.cr   c0, 0xF0F0     // alternate nibbles from each register}
+%\item{\tt LMIX.cr  c2, c1, c0, 0  // Odd nibbles from c1, even nibbles from c2.}
+%\item{\tt LMIX.cr  c3, c1, c0, 4  // Even nibbles from c1, even nibbles from c3.}
+%\item{\tt LMIX.cr  c4, c1, c0, 4  // Odd  nibbles from c1, even nibbles from c3.}
+%\end{itemize}
+%}
+
+% -----------------------------------------------------------------------------
+
+% TODO: shamt -> rtamt
 \XCINSTR{HMIX.cr}{rd, rs1, rs2, shamt}{
   \ienchmixcr
 }{
@@ -392,27 +411,16 @@
   }
 }
 
-%\paragraph{Examples:}
-%\ASM{MIX.cr} allows us to create any mix of bits from two registers
-%using a single 3-instruction sequence:
-%
-%\begin{itemize}
-%\item{\tt LUI.cr   c0, 0xF0F0     // Load a mask into c0 which will select}
-%\item{\tt LLI.cr   c0, 0xF0F0     // alternate nibbles from each register}
-%\item{\tt LMIX.cr  c2, c1, c0, 0  // Odd nibbles from c1, even nibbles from c2.}
-%\item{\tt LMIX.cr  c3, c1, c0, 4  // Even nibbles from c1, even nibbles from c3.}
-%\item{\tt LMIX.cr  c4, c1, c0, 4  // Odd  nibbles from c1, even nibbles from c3.}
-%\end{itemize}
-%}
-
 % =============================================================================
 
-\subsubsection{Class-$2.4$: packed operations}
+\subsubsection{Class-$2.4$: packed}
 \label{sec:spec:instr:2:4}
 
 %When coding these instructions as assembly mnemonics, the {\tt x} in the
 %instruction names below should be replaced with the pack width. Hence
 %for pack width 4, \ASM{SLLI.px} becomes \ASM{SLL.p4}.
+
+% -----------------------------------------------------------------------------
 
 \XCINSTR{ADD.px}{pw, crd, crs1, crs2}{
   \iencaddpx
@@ -432,6 +440,8 @@
   }
 }
 
+% -----------------------------------------------------------------------------
+
 \XCINSTR{SUB.px}{pw, crd, crs1, crs2}{
   \iencsubpx
 }{
@@ -450,6 +460,8 @@
   }
 }
 
+% -----------------------------------------------------------------------------
+
 \XCINSTR{MUL.px}{pw, crd, crs1, crs2}{
   \iencmulpx
 }{
@@ -467,6 +479,8 @@
     $\INDEX[{\VERB[RV]{pw}}]{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN \INDEX[{\VERB[RV]{pw}}]{\XCR[*][{\VERB[RV]{crs1}}]}{i} \OP[{\VERB[RV]{pw}}][u]{\times} \INDEX[{\VERB[RV]{pw}}]{\XCR[*][{\VERB[RV]{crs1}}]}{i}$ \;
   }
 }
+
+% -----------------------------------------------------------------------------
 
 \XCINSTR{SLL.px}{pw, crd, crs1, crs2}{
   \iencsllpx
@@ -489,6 +503,8 @@
   }
 }
 
+% -----------------------------------------------------------------------------
+
 \XCINSTR{SLLI.px}{pw, crd, crs1, cshamt}{
   \iencsllipx
 }{
@@ -509,6 +525,8 @@
     $\INDEX[{\VERB[RV]{pw}}]{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN \INDEX[{\VERB[RV]{pw}}]{\XCR[*][{\VERB[RV]{crs1}}]}{i} \OP[{\VERB[RV]{pw}}][u]{\LSH}   \VERB[RV]{cshamt}$ \;
   }
 }
+
+% -----------------------------------------------------------------------------
 
 \XCINSTR{SRL.px}{pw, crd, crs1, crs2}{
   \iencsrlpx
@@ -531,6 +549,8 @@
   }
 }
 
+% -----------------------------------------------------------------------------
+
 \XCINSTR{SRLI.px}{pw, crd, crs1, cshamt}{
   \iencsrlipx
 }{
@@ -552,6 +572,8 @@
   }
 }
 
+% -----------------------------------------------------------------------------
+
 \XCINSTR{ROT.px}{pw, crd, crs1, crs2}{
   \iencrotpx
 }{
@@ -568,6 +590,8 @@
     $\INDEX[{\VERB[RV]{pw}}]{\XCR[*][{\VERB[RV]{crd}}]}{i} \ASN \INDEX[{\VERB[RV]{pw}}]{\XCR[*][{\VERB[RV]{crs1}}]}{i} \OP[{\VERB[RV]{pw}}][u]{\LRT}   \INDEX[{\VERB[RV]{pw}}]{\XCR[*][{\VERB[RV]{crs1}}]}{i}$ \;
   }
 }
+
+% -----------------------------------------------------------------------------
 
 \XCINSTR{ROTI.px}{pw, crd, crs1, cshamt}{
   \iencrotipx
@@ -586,101 +610,68 @@
   }
 }
 
-%\instdescx{TWID.B}
-%{\ienctwidb}
-%{
-%The \ASM{TWID.B} instruction is used to twiddle {\em bytes within words.}
-%It arbitrarily maps the bytes of a source word onto the bytes of a
-%destination word.
-%This instruction doubles as a halfword permutation instruction.
-%}{
-%\begin{itemize}
-%\item \INST{TWID.B crd, crs1, b0, b1, b2, b3}{
-%    $bytes \ASN \LIST{\XCR[*][crs1][31:24],
-%                      \XCR[*][crs1][23:16],
-%                      \XCR[*][crs1][15: 8],
-%                      \XCR[*][crs1][ 7: 0]}$\\
-%    $ \XCR[*][{\VERB[RV]{crd}}] \ASN bytes[\VERB[RV]{b3}] \CONS
-%                               bytes[\VERB[RV]{b2}] \CONS
-%                               bytes[\VERB[RV]{b1}] \CONS
-%                               bytes[\VERB[RV]{b0}] $ 
-%}
-%\end{itemize}
-%}{}
-%
-%\instdescx{TWID.Nx}
-%{\ienctwidnzero\ienctwidnone}
-%{
-%The \ASM{TWID.Nx} instruction is used to twiddle {\em nibbles within 
-%half-words}.
-%It works on the {\tt x}'th halfword of a register word where
-%$x\in{0,1}.$.
-%}{
-%\begin{itemize}
-%\item \INST{TWID.N0 crd, crs1, b0, b1, b2, b3}{
-%$ \XCR[*][{\VERB[RV]{crd}}][15: 0] \ASN nibbles[\VERB[RV]{b3}] \CONS
-%                               nibbles[\VERB[RV]{b2}] \CONS
-%                               nibbles[\VERB[RV]{b1}] \CONS
-%                               nibbles[\VERB[RV]{b0}] $ \\
-%$ \XCR[*][{\VERB[RV]{crd}}][31:16] \ASN \XCR[*][\VERB[RV]{crs1}][31:16]$ \\
-%}
-%\item \INST{TWID.N1 crd, crs1, b0, b1, b2, b3}{
-%$ \XCR[*][{\VERB[RV]{crd}}][15: 0] \ASN \XCR[*][\VERB[RV]{crs1}][15: 0]$ \\
-%$ \XCR[*][{\VERB[RV]{crd}}][31:16] \ASN nibbles[\VERB[RV]{b3}] \CONS
-%                               nibbles[\VERB[RV]{b2}] \CONS
-%                               nibbles[\VERB[RV]{b1}] \CONS
-%                               nibbles[\VERB[RV]{b0}] $ \\
-%}
-%\end{itemize}
-%}{}
-%
-%
-%\instdescx{TWID.Cx}
-%{\ienctwidczero\ienctwidcone\ienctwidctwo\ienctwidcthree}
-%{
-%The \ASM{TWID.[Cx]} instruction is used to twiddle {\em pairs of bits
-%\footnote{A {\em crumb}, if you will.}
-%within bytes}.
-%It works on the {\tt x}'th byte of a register word where
-%$x\in{0,1,2,3}.$.
-%}{
-%\begin{itemize}
-%\item \INST{TWID.C0 crd, crs1, b0, b1, b2, b3}{
-%$ \XCR[*][{\VERB[RV]{crd}}][ 7: 0] \ASN crumbs[\VERB[RV]{b3}] \CONS
-%                                  crumbs[\VERB[RV]{b2}] \CONS
-%                                  crumbs[\VERB[RV]{b1}] \CONS
-%                                  crumbs[\VERB[RV]{b0}] $ \\
-%$ \XCR[*][{\VERB[RV]{crd}}][31: 8] \ASN \XCR[*][\VERB[RV]{crs1}][31: 8]$\\
-%}
-%\item \INST{TWID.C1 crd, crs1, b0, b1, b2, b3}{
-%$ \XCR[*][{\VERB[RV]{crd}}][ 7: 0] \ASN \XCR[*][\VERB[RV]{crs1}][ 7: 0]$\\
-%$ \XCR[*][{\VERB[RV]{crd}}][15: 8] \ASN crumbs[\VERB[RV]{b3}] \CONS
-%                                  crumbs[\VERB[RV]{b2}] \CONS
-%                                  crumbs[\VERB[RV]{b1}] \CONS
-%                                  crumbs[\VERB[RV]{b0}] $ \\
-%$ \XCR[*][{\VERB[RV]{crd}}][31:16] \ASN \XCR[*][\VERB[RV]{crs1}][31:16]$\\
-%}
-%\item \INST{TWID.C2 crd, crs1, b0, b1, b2, b3}{
-%$ \XCR[*][{\VERB[RV]{crd}}][15: 0] \ASN \XCR[*][\VERB[RV]{crs1}][15: 0]$\\
-%$ \XCR[*][{\VERB[RV]{crd}}][23:16] \ASN crumbs[\VERB[RV]{b3}] \CONS
-%                                  crumbs[\VERB[RV]{b2}] \CONS
-%                                  crumbs[\VERB[RV]{b1}] \CONS
-%                                  crumbs[\VERB[RV]{b0}] $ \\
-%$ \XCR[*][{\VERB[RV]{crd}}][31:24] \ASN \XCR[*][\VERB[RV]{crs1}][31:24]$\\
-%}
-%\item \INST{TWID.C3 crd, crs1, b0, b1, b2, b3}{
-%$ \XCR[*][{\VERB[RV]{crd}}][23: 0] \ASN \XCR[*][\VERB[RV]{crs1}][23: 0]$\\
-%$ \XCR[*][{\VERB[RV]{crd}}][31:24] \ASN crumbs[\VERB[RV]{b3}] \CONS
-%                                  crumbs[\VERB[RV]{b2}] \CONS
-%                                  crumbs[\VERB[RV]{b1}] \CONS
-%                                  crumbs[\VERB[RV]{b0}] $ \\
-%}
-%\end{itemize}
-%}{}
+% -----------------------------------------------------------------------------
+
+\XCINSTR{TWID.B}{crd, crs1, b0, b1, b2, b3}{
+  \ienctwidb
+}{
+  Permute bytes   of               some $\XCR$ register,
+  storing the result in               another $\XCR$ register.
+}{
+  $t \ASN            \XCR[*][{\VERB[RV]{crs}}]               $ \;
+  $           \XCR[*][{\VERB[RV]{crd}}]                \ASN \INDEX[ 8]{t}{\VERB[RV]{b3}} \CONS
+                                                            \INDEX[ 8]{t}{\VERB[RV]{b2}} \CONS
+                                                            \INDEX[ 8]{t}{\VERB[RV]{b1}} \CONS
+                                                            \INDEX[ 8]{t}{\VERB[RV]{b0}} $ \;
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{TWID.Nx}{crd, crs1, b0, b1, b2, b3}{
+  \ienctwidnzero
+  \ienctwidnone
+}{
+  Permute nibbles of a halfword in some $\XCR$ register,
+  storing the result in a halfword of another $\XCR$ register.
+  Note that the index 
+  $
+  \VERB[RV]{x} \in \SET{ 0, 1 }
+  $
+  is part of the opcode (and hence mnemonic).
+}{
+  $t \ASN \INDEX[16]{\XCR[*][{\VERB[RV]{crs}}]}{\VERB[RV]{x}}$ \;
+  $\INDEX[16]{\XCR[*][{\VERB[RV]{crd}}]}{\VERB[RV]{x}} \ASN \INDEX[ 4]{t}{\VERB[RV]{b3}} \CONS
+                                                            \INDEX[ 4]{t}{\VERB[RV]{b2}} \CONS
+                                                            \INDEX[ 4]{t}{\VERB[RV]{b1}} \CONS
+                                                            \INDEX[ 4]{t}{\VERB[RV]{b0}} $ \;
+}
+
+% -----------------------------------------------------------------------------
+
+\XCINSTR{TWID.Cx}{crd, crs1, b0, b1, b2, b3}{
+  \ienctwidczero
+  \ienctwidcone
+  \ienctwidctwo
+  \ienctwidcthree
+}{
+  Permute crumbs  of a byte     in some $\XCR$ register,
+  storing the result in a byte     of another $\XCR$ register.
+  Note that the index 
+  $
+  \VERB[RV]{x} \in \SET{ 0, 1, 2, 3 }
+  $
+  is part of the opcode (and hence mnemonic).
+}{
+  $t \ASN \INDEX[ 8]{\XCR[*][{\VERB[RV]{crs}}]}{\VERB[RV]{x}}$ \;
+  $\INDEX[ 8]{\XCR[*][{\VERB[RV]{crd}}]}{\VERB[RV]{x}} \ASN \INDEX[ 2]{t}{\VERB[RV]{b3}} \CONS
+                                                            \INDEX[ 2]{t}{\VERB[RV]{b2}} \CONS
+                                                            \INDEX[ 2]{t}{\VERB[RV]{b1}} \CONS
+                                                            \INDEX[ 2]{t}{\VERB[RV]{b0}} $ \;
+}
 
 % =============================================================================
 
-\subsubsection{Class-$2.5$: multi-precision integer operations}
+\subsubsection{Class-$2.5$: multi-precision}
 \label{sec:spec:instr:2:5}
 
 %These instructions use two destination registers and between three
@@ -740,10 +731,10 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32]{u}{+} \XCR[*][{\VERB[RV]{crs2}}] )$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[64][u]{+}        \XCR[*][{\VERB[RV]{crs2}}] )  $ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[64:32]$ \;
 }
@@ -755,11 +746,11 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32]{u}{+} \XCR[*][{\VERB[RV]{crs2}}] ) 
-                                                                \OP[32]{u}{+} \XCR[*][{\VERB[RV]{crs3}}]  $ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[64][u]{+}        \XCR[*][{\VERB[RV]{crs2}}] ) 
+                                                                \OP[64][u]{+} \INDEX{\XCR[*][{\VERB[RV]{crs3}}]}{0}$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[64:32]$ \;
 }
@@ -771,10 +762,10 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32]{u}{-} \XCR[*][{\VERB[RV]{crs2}}] )$\;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[64][u]{-}        \XCR[*][{\VERB[RV]{crs2}}] )  $\;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[64:32]$ \;
 }
@@ -786,11 +777,11 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32]{u}{-} \XCR[*][{\VERB[RV]{crs2}}] ) 
-                                                                \OP[32]{u}{-} \XCR[*][{\VERB[RV]{crs3}}]  $ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[64][u]{-}        \XCR[*][{\VERB[RV]{crs2}}] ) 
+                                                                \OP[64][u]{-} \INDEX{\XCR[*][{\VERB[RV]{crs3}}]}{0}  $ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[64:32]$ \;
 }
@@ -802,10 +793,10 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crd2}}] \CONS \XCR[*][{\VERB[RV]{crd1}}] ) \OP[{64}]{u}{+} \XCR[*][{\VERB[RV]{crs1}}]$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crd2}}] \CONS \XCR[*][{\VERB[RV]{crd1}}] ) \OP[64][u]{+} \XCR[*][{\VERB[RV]{crs1}}]$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[64:32]$ \;
 }
@@ -817,11 +808,11 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crd2}}] \CONS \XCR[*][{\VERB[RV]{crd1}}] ) \OP[64]{u}{+} \XCR[*][{\VERB[RV]{crs1}}] 
-                                                                                                   \OP[64]{u}{+} \XCR[*][{\VERB[RV]{crs2}}]$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crd2}}] \CONS \XCR[*][{\VERB[RV]{crd1}}] ) \OP[64][u]{+} \XCR[*][{\VERB[RV]{crs1}}] 
+                                                                                                   \OP[64][u]{+} \XCR[*][{\VERB[RV]{crs2}}]$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[64:32]$ \;
 }
@@ -833,11 +824,11 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32]{u}{\cdot} \XCR[*][{\VERB[RV]{crs2}}] ) 
-                                                                \OP[32]{u}{+}     \XCR[*][{\VERB[RV]{crs3}}]$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \OP[32][u]{\times} \XCR[*][{\VERB[RV]{crs2}}] ) 
+                                                                \OP[64][u]{+}      \XCR[*][{\VERB[RV]{crs3}}]$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[64:32]$ \;
 }
@@ -849,10 +840,10 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \CONS \XCR[*][{\VERB[RV]{crs2}}] ) \LSH \XCR[*][{\VERB[RV]{crs3}}]_{5:0}$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \CONS \XCR[*][{\VERB[RV]{crs2}}] ) \OP[64][u]{\LSH} \XCR[*][{\VERB[RV]{crs3}}]_{5:0}$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[63:32]$ \;
 
@@ -865,10 +856,10 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \CONS \XCR[*][{\VERB[RV]{crs2}}] ) \LSH shamt$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \CONS \XCR[*][{\VERB[RV]{crs2}}] ) \OP[64][u]{\LSH} shamt$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[63:32]$ \;
 }
@@ -880,10 +871,10 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \CONS \XCR[*][{\VERB[RV]{crs2}}] ) \RSH \XCR[*][{\VERB[RV]{crs3}}]_{5:0}$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \CONS \XCR[*][{\VERB[RV]{crs2}}] ) \OP[64][u]{\RSH} \XCR[*][{\VERB[RV]{crs3}}]_{5:0}$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[63:32]$ \;
 
@@ -896,10 +887,10 @@
 }{
   Note that 
   $
-  \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } \mapsto \VERB[RV]{crdm} .
+  \VERB[RV]{crdm} \mapsto \TUPLE{ \VERB[RV]{crd1}, \VERB[RV]{crd2} } .
   $
 }{
-  $t                          \ASN (\XCR[*][{\VERB[RV]{crs1}}] \CONS \XCR[*][{\VERB[RV]{crs2}}]) \RSH shamt$ \;
+  $t                          \ASN ( \XCR[*][{\VERB[RV]{crs1}}] \CONS \XCR[*][{\VERB[RV]{crs2}}] ) \OP[64][u]{\RSH} shamt$ \;
   $\XCR[*][{\VERB[RV]{crd1}}] \ASN t[31: 0]$ \;
   $\XCR[*][{\VERB[RV]{crd2}}] \ASN t[63:32]$ \;
 
