Formal checks for sll,mul,sub.px
- Fix raising bad pack width exceptions for non-packed arithmetic instructions.
- Add checks fro mull/sll/sub.px
- Fix packed shift instructions having 1 too many bits in their shift amound
  fields.
- See issue #27

 Changes to be committed:
	modified:   docs/implementation/verify.tex
	new file:   flow/gtkwave/formal-flow-view.gtkw
	modified:   rtl/coprocessor/scarv_cop_idecode.v
	modified:   rtl/coprocessor/scarv_cop_palu.v
	new file:   verif/formal/fml_chk_instr_mul_px.v
	new file:   verif/formal/fml_chk_instr_sll_px.v
	new file:   verif/formal/fml_chk_instr_sub_px.v
	modified:   verif/formal/fml_pack_widths.vh

--- a/docs/implementation/verify.tex
+++ b/docs/implementation/verify.tex
@@ -48,6 +48,10 @@ verification flow.
 \item Memory bus errors being raised when no memory instruction was active.
 \item Pack width instructions not raising invalid opcode exceptions for
     invalid pack widths.
+\item Raising invalid pack width exceptions for instructions with no pack width
+    fields.
+\item Design shift amound fields 1 bit too big resulting in different results only
+    when the pack width is 1.
 \end{itemize}
 
 \subsection{Constrained Random Flow}
