Add rot.px formal checks.
- Fix model bug where rotate was handled incorrectly if the
  rotate amount was greater than twice the pack width.
- See issue #27

 On branch master
 Your branch is ahead of 'origin/master' by 4 commits.
   (use "git push" to publish your local commits)

 Changes to be committed:
	modified:   docs/implementation/verify.tex
	modified:   rtl/coprocessor/scarv_cop_palu_shifter.v
	new file:   verif/formal/fml_chk_instr_rot_px.v
	modified:   verif/formal/fml_pack_widths.vh

--- a/docs/implementation/verify.tex
+++ b/docs/implementation/verify.tex
@@ -52,6 +52,8 @@ verification flow.
     fields.
 \item Design shift amound fields 1 bit too big resulting in different results only
     when the pack width is 1.
+\item Rotate instruction {\em model} was incorrect if the rotate ammount was
+    greater than twice the pack width.
 \end{itemize}
 
 \subsection{Constrained Random Flow}
